@@ -1,3 +1,14 @@
+2018-05-31  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-1066
+
+	* src/linefunctions.cc (Linefunctions::SingleLevelLineData::htp_dz1dt,
+	Linefunctions::SingleLevelLineData::htp_dBdt):
+
+	Use float literal instead of int when multiplying with a complex
+	number. Fixes compilation with Intel compiler which can otherwise not
+	decide whether it should cast the int to float or double.
+
 2018-05-30  Richard Larsson  <ric.larsson@gmail.com>
 
 	* arts-2-3-1065
